--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "white",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "webpack": "^3.10.0"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.6.3",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
