--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "babel-plugin-react-transform": "^3.0.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.8",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "react-transform-hmr": "^1.0.4",
+    "redux-logger": "^3.0.6",
     "style-loader": "^0.19.1",
     "webpack-dev-server": "^2.9.7"
   }
