--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack",
     "server": "webpack-dev-server --open",
-    "build": "set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress",
+    "build": "set NODE_ENV=production && webpack --config ./webpack.config.prod.js --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "white",
@@ -19,6 +19,7 @@
     "react-router": "^3.0.2",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-auth-wrapper": "^2.0.2",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.10.0"
   },
@@ -34,6 +35,7 @@
     "css-loader": "^0.28.8",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
+    "json-server": "^0.12.1",
     "react-transform-hmr": "^1.0.4",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.19.1",
